# burp-mcp-plus

./: .gitignore  LICENSE  README.md  pyproject.toml
burp-extension/: deduped_history.py
examples/: claude_desktop_config.json
src/burp_mcp_plus/: builder.py  burp_client.py  dedup.py  jsfiles.py  server.py
tests/: test_builder.py
